# llm-proxy-gateway

./: Dockerfile  Makefile  README.md  __init__.py  anthropic.py  audit.py  base.py  config.py  docker-compose.yml  errors.py  gateway.example.yaml  local.py  main.py  middleware.py  models.py  openai.py  policy.py  pyproject.toml  redaction.py  run_dev.sh
llm-proxy-gateway/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
llm-proxy-gateway/configs/: config.example.yaml
llm-proxy-gateway/docs/: architecture.md  config.md  security.md
llm-proxy-gateway/evals/: README.md
llm-proxy-gateway/examples/: curl_chat.sh  curl_embed.sh
llm-proxy-gateway/src/llm_proxy_gateway/: app.py  cache.py  cli.py  config.py  errors.py  logging.py  routing.py
llm-proxy-gateway/src/llm_proxy_gateway/evals/: harness.py
llm-proxy-gateway/src/llm_proxy_gateway/middleware/: access_log.py  auth.py  body_limit.py  rate_limit.py  request_id.py
llm-proxy-gateway/src/llm_proxy_gateway/policies/: basic.py
llm-proxy-gateway/src/llm_proxy_gateway/providers/: anthropic.py  base.py  mock.py  openai.py
llm-proxy-gateway/src/llm_proxy_gateway/schemas/: openai.py
llm-proxy-gateway/tests/: test_allowlist_and_prompt_size.py  test_auth_and_rate_limit.py
